force-app/main/default/objects/Loan_Product__c/fields/Max_FOIR__c.field-meta.xml
<CustomField>
    <fullName>Max_FOIR__c</fullName>
    <label>Max FOIR</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>