force-app/main/default/objects/Loan_Product__c/fields/Max_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Loan_Amount__c</fullName>
    <label>Max Loan Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>