force-app/main/default/objects/Loan_Product__c/fields/Max_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Max_Tenure__c</fullName>
    <label>Max Tenure</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>