force-app/main/default/objects/Loan_Product__c/fields/Min_Age__c.field-meta.xml
<CustomField>
    <fullName>Min_Age__c</fullName>
    <label>Min Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>