force-app/main/default/objects/Loan_Product__c/fields/Min_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Min_Credit_Score__c</fullName>
    <label>Min Credit Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>