force-app/main/default/objects/Loan_Product__c/fields/Min_Income_Required__c.field-meta.xml
<CustomField>
    <fullName>Min_Income_Required__c</fullName>
    <label>Min Income Required</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>