force-app/main/default/objects/Loan_Product__c/fields/Min_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Min_Interest_Rate__c</fullName>
    <label>Min Interest Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>