force-app/main/default/objects/Loan_Product__c/fields/Min_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Min_Tenure__c</fullName>
    <label>Min Tenure</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>