force-app/main/default/objects/Loan_Product__c/fields/Prepayment_Charges__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_Charges__c</fullName>
    <label>Prepayment Charges</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>