force-app/main/default/objects/Loan_Product__c/fields/Processing_Fee_Pct__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fee_Pct__c</fullName>
    <label>Processing Fee Pct</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>