force-app/main/default/objects/Loan_Product__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Personal</fullName>
        </value>
        <value>
            <fullName>Business</fullName>
        </value>
        <value>
            <fullName>Vehicle</fullName>
        </value>
        <value>
            <fullName>Home</fullName>
        </value>
        <value>
            <fullName>Gold</fullName>
        </value>
        <value>
            <fullName>Education</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>