force-app/main/default/objects/Loan_Product__c/fields/Required_Documents__c.field-meta.xml
<CustomField>
    <fullName>Required_Documents__c</fullName>
    <label>Required Documents</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>