force-app/main/default/objects/Loan_Product__c/fields/Sunset_Date__c.field-meta.xml
<CustomField>
    <fullName>Sunset_Date__c</fullName>
    <label>Sunset Date</label>
    <type>Date</type>
</CustomField>