force-app/main/default/objects/Loan_Product__c/fields/Target_Segment__c.field-meta.xml
<CustomField>
    <fullName>Target_Segment__c</fullName>
    <label>Target Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Salaried</fullName>
        </value>
        <value>
            <fullName>Self-Employed</fullName>
        </value>
        <value>
            <fullName>Business</fullName>
        </value>
        <value>
            <fullName>Student</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>